<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FissonApps</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="title">Title</string>
     <string name="signup">Sign up</string>
     <string name="login">Login</string>
     <string name="name">Name</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="submit">Submit</string>
     <string name="home">Home</string>
     <string name="newsletter">NewsLetter</string>
     <string name="events">Events</string>
      <string name="popup_weight">1</string>
      <string name="toastbotton_margin">90</string>
      
       <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing...</string>
    <string name="ptr_last_updated">Last Updated on %1$s</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="select_photo_from">Select a photo from:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="basic_info">Basic Info</string>
    <string name="edit">Edit</string>
    <string name="work">Work</string>
    <string name="designation">Designation</string>
    <string name="DOB">DOB</string>
    <string name="About:">About:</string>
     <string name="About">About</string>
     <string name="text">text</string>
     <string name="time">time</string>
     <string name="do_you_have_accout">Dont you have account..?</string>
     <string name="user_name_already_exists">UserName already used. Select any of the following</string>
     <string name="change_password">Change Password</string>

</resources>
