<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/login_layout_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/login_margin"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/thirty_five"
            android:layout_marginBottom="@dimen/twenty"
            android:background="@drawable/button_white_background"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/name"
            android:singleLine="true"
            android:textColor="@color/orange" />


        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/thirty_five"
            android:layout_marginBottom="@dimen/twenty"
            android:background="@drawable/button_white_background"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/orange" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/thirty_five"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_margin_botton"
        android:background="@drawable/button_orange_background"
        android:paddingLeft="@dimen/fifteen"
        android:paddingRight="@dimen/fifteen"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button_submit"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/fourty"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/ten"
            android:text="@string/do_you_have_accout"
            android:textSize="@dimen/sixteen" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/orange"
            android:textSize="@dimen/sixteen" />
    </LinearLayout>

</RelativeLayout>