<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/setting_button_home"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:background="@drawable/button_orange_background"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setting_button_newsletter"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.2"
            android:background="@drawable/button_orange_background"
            android:text="@string/newsletter"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/setting_button_events"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:background="@drawable/button_orange_background"
            android:text="@string/events"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>