<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#ECF0F1" >

    <FrameLayout
        android:id="@+id/heading_profile_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textborder" >

        <TextView
            android:id="@+id/heading_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:padding="@dimen/six"
            android:text="Profile"
            android:textColor="@color/orange"
            android:textSize="@dimen/twenty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cancel_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/four"
            android:gravity="center_vertical|right"
            android:text="Cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/eighteen" />
    </FrameLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading_profile_layout" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:gravity="center" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/five">

                    <ImageView
                        android:id="@+id/frnd_profile_picture"
                        android:layout_width="@dimen/one_fifty"
                        android:layout_height="@dimen/one_fifty"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/placeholder2" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/frnd_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/ten"
                android:text="Lakshmi"
                android:textColor="@color/orange"
                android:textSize="@dimen/twenty_two" />

            <LinearLayout
                android:id="@+id/dob_main_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/frnd_username"
                android:layout_margin="@dimen/ten"
                android:background="@drawable/textborder_thin"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/basic_info"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/layout_dob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:layout_weight="5"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/dob_text"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/DOB"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/fourteen"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text=": "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/frnd_dob"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/five"
                        android:layout_weight="3.3"
                        android:background="@drawable/textborder"
                        android:padding="@dimen/ten"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/designation_main_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dob_main_layout"
                android:layout_margin="@dimen/ten"
                android:background="@drawable/textborder_thin"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/work"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/layout_design"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:orientation="horizontal"
                    android:weightSum="5" >

                    <TextView
                        android:id="@+id/design_text"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/designation"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/fourteen"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text=": "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/frnd_designation"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/five"
                        android:layout_weight="3.3"
                        android:background="@drawable/textborder"
                        android:padding="@dimen/ten"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_main_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/designation_main_layout"
                android:layout_margin="@dimen/ten"
                android:background="@drawable/textborder_thin"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:orientation="horizontal"
                    android:weightSum="2" >

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/About"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/one"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/layout_about"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/ten"
                    android:orientation="horizontal"
                    android:weightSum="5" >

                    <TextView
                        android:id="@+id/about_text"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="About You"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/fourteen"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text=": "
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/frnd_about"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/five"
                        android:layout_weight="3.3"
                        android:background="@drawable/textborder"
                        android:padding="@dimen/ten"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/ten"
                android:layout_below="@id/about_main_layout"
                android:text="textView"
                android:visibility="invisible" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>